[FIX] : Image too big (Bundle Images)

--- a/scss/product-list.scss
+++ b/scss/product-list.scss
@@ -237,6 +237,7 @@
           position: relative;
 
           .product-image {
+            position:relative;
             &:after {
               content: '';
               display: block;
@@ -251,12 +252,12 @@
             }
 
             img {
-              width: 74px;
-              height: 74px;
-              @media (max-width: 1024px) {
-                width: 54px;
-                height: 54px;
-              }
+              position: absolute;
+              max-width: 100%;
+              max-height: 100%;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%,-50%);
             }
           }
 
